# Core

./: .gitignore  Assumptions.hpp  CMakeLists.txt  Common.hpp  Compilers.hpp  Config.hpp  Exceptions.hpp  Hashing.hpp  LICENSE  LangulusUtilities.cmake  README.md  TypeList.hpp  Utilities.hpp
.github/workflows/: ci.yml  dispatch.yml
include/: Langulus.Core.hpp  LangulusCore.hpp
source/: Assumptions.hpp  Common.hpp  Config.hpp  Exceptions.hpp  Semantics.hpp  TypeList.hpp  Utilities.hpp
source/Core/: Common.hpp  Config.hpp  Exceptions.hpp  Sequences.hpp  Size.hpp  TypeList.hpp  Types.hpp  Utilities.hpp
